# fb-quiz-bot

./: .gitignore
backend/: Cargo.toml
backend/src/: console.rs  fb_hook_srv.rs  lib.rs  main.rs  text_util.rs
backend/src/admin/: mod.rs
backend/src/game_engine/: engine.rs  game_def.rs  mod.rs  types.rs
backend/src/mock/: game.rs
backend/src/services/: definitions.rs  mod.rs  response.rs  sessions.rs
backend/src/test_resources/games/: channels.json  game-1.json  game-2.json
backend/src/test_resources/msg/: echo1.json  new_message.json  reply1.json
scripts/: copy_backend.yml  deploy.sh  docker_build.sh  setup_domain.yml  setup_lb.yml  setup_scheduler.yml
scripts/templates/: app.service.j2  nginx-https.j2  nginx.conf.j2
