[package]
name = "insta_quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
hyper = { version = "0.14", features = ["http1", "client", "server"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.17"
async-trait = "0.1.52"
hyper-rustls = "0.23"
querystring = "1.1.0"
once_cell = "1.9.0"
regex = "1"
rand = "0.8.5"
atomic_refcell = "0.1.8"
urldecode = "0.1.1"

[lib]
name = "quiz"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "console"
path = "src/console.rs"